[package]
edition = "2021"
name = "data-processing"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "4.0.15", features = ["derive"] }
futures = "0.3.24"
tokio = { version = "1.21.2", features = ["full"] }
yahoo_finance_api = { version = "1.3.0", features = [] }
